<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"

    android:padding="20dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="@string/edunexus"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/si"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="#5C5C5B" />

    <TextView
        android:id="@+id/lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/si"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/choose_your_role"
        android:textColor="#5C5C5B" />

    <ImageView
        android:id="@+id/ll2"
        android:layout_width="150dp"
        android:layout_height="133dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/img_1" />

    <ImageView
        android:id="@+id/ll3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sb"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/finalbg" />

    <Spinner
        android:id="@+id/spin"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_below="@id/lab"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:backgroundTint="#8E8E8E"
        android:contentDescription="@string/app_name"
        android:textColor="#2C2C2C"
        android:spinnerMode="dropdown"
         />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sb"
        android:layout_width="111dp"
        android:layout_height="36dp"
        android:layout_below="@id/spin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/light_blue_600"
        android:fontFamily="serif-monospace"
        android:text="@string/proceed"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#B5C7DD" />
</RelativeLayout>






    <!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Task Scheduler"
        android:textSize="30sp"
        android:textColor="#000080"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:background="#FFFFFF"
        android:elevation="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Task Name"
            android:textSize="20sp"
            android:textColor="#000080"/>

        <EditText
            android:id="@+id/task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:background="#FFFFFF"
        android:elevation="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Task Description"
            android:textSize="20sp"
            android:textColor="#000080"/>

        <EditText
            android:id="@+id/task_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textMultiLine"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:background="#FFFFFF"
        android:elevation="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Task Date"
            android:textSize="20sp"
            android:textColor="#000080"/>

        <EditText
            android:id="@+id/task_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textMultiLine"/>
    </LinearLayout>
</LinearLayout>-->




<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Task Name"
            android:textSize="20sp"
            android:textColor="#404040"/>

        <EditText
            android:id="@+id/et_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="8dp"
            android:textColor="#404040"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textSize="20sp"
            android:textColor="#404040"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/et_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="8dp"
            android:textColor="#404040"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textSize="20sp"
                android:textColor="#404040"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Time"
                android:textSize="20sp"
                android:textColor="#404040"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_task_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="8dp"
                android:textColor="#404040"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/et_task_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="8dp"
                android:textColor="#404040"
                android:textSize="16sp"
                android:layout_weight="1"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_schedule_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0095FF"
            android:text="Schedule Task"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</RelativeLayout>-->

